--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -155,6 +155,11 @@ a{
   top: 0; right: 0; bottom: 0; left: 0;
 }
 
+#canvasholder{
+  padding-bottom: 10px;
+  padding-right: 10px;
+}
+
 .checkbox{
   width: 26px;
   height: 26px;
