--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -350,6 +350,11 @@ a{
   font-size: 15px;
 }
 
+.imagescale{
+  max-width:100%;
+  height: auto;
+}
+
 .imagetext{
   font-family: selecttext;
   /* font-size: 1.6em; */
