--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -68,17 +68,18 @@ a{
   display: table-cell;
   font-family: button;
   font-size: .8em;
+  height: 19px;
   margin-bottom: 3px;
   margin-left: 0px;
   margin-top: 3px;
   padding: 4px;
   vertical-align: top;
-  width:150px;
+  width:142px;
 }
 
 .auth_xy{
   display: table-cell;
-  width: 50px;
+  width: 45px;
   background-color: rgb(199, 199, 199);
   margin-left: 2px;
   margin-top: 3px;
@@ -250,11 +251,13 @@ a{
 .entrylabel{
   display: inline-block;
   font-family:button;
+  height: 18px;
   margin-bottom: 3px;
   margin-left: 3px;
   margin-right: 0px;
   margin-top: 3px;
   padding: 4px;
+  text-transform:capitalize;
   user-select: none;
 }
 
@@ -803,12 +806,14 @@ a{
 }
 
 .sellist{
-  border: 0px;
   background-color: rgb(199, 199, 199);
-  padding: 4px;
-  width: 150px;
-  font-size: .8em;
+  border: 0px;
   font-family: button;
+  font-size: .8em;
+  padding-bottom: 6px;
+  padding-top: 2px;
+  padding-left: 5px;
+  width: 145px;
 }
 
 .skinnybank{
