Added defaults to rect and arc drawcode. Added defaults to text entry. Shape edit link in object properties.

--- a/author/css/canvasser.css
+++ b/author/css/canvasser.css
@@ -20,6 +20,10 @@ a{
   border: 2px rgb(100,100,100) solid;
 }
 
+.abs{
+  position: absolute;
+}
+
 #alert_box{
   background-color: var(--alert-bg-color);
   border-radius: 10px;
